<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputText"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/placeholder"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:onClick="onClickAdd"
        android:text="@string/buttonText"
        android:textColor="#FFFFFF"
        tools:ignore="VisualLintButtonSize" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="107dp" >
    </ListView>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="6dp"
        android:text="@string/clearButtonText"
        android:textColor="#FFFFFF"
        tools:ignore="VisualLintButtonSize" />
</RelativeLayout>